added bounce effect in know more about me button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
            My Name is Amann Yadav. I'm a web-developer. I have been in IT field for two years. I have a bachelor's degree in Electronics & Instrumentation.
           </p>
           <div class="flex space-x-2 justify-center flex-wrap">
-            <button class="my-btnn"><a
+            <button class="my-btnn bounce-top"><a
               class="inline-flex text-white bg-purple-500 border-0 py-2 px-6 focus:outline-none hover:bg-purple-600 rounded text-lg"
               href="#my-about-me"
             > 
